<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Guessing Game</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="comp_prompt_1">My Number Is Between</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="comp_prompt_2">1 and 100</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="comp_prompt_3">Try To Guess It!</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="button_guess_text">Guess!</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="result_text_too_low"> is too low!</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="result_text_too_high"> is too high!</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="result_text_correct"> is CORRECT!</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="answer_label">Answer: </string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="show_answer_prompt">Show Answer</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="button_play_again_text">Play Again!</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="result_text_out_of_range"> is out of range!</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="toast_no_value_entered">Please Enter A Guess!</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="pref_title">Settings</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="pref_guess_range">Guess Range</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="pref_min_guess">Lowest Number</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="pref_min_guess_summary">Smallest Number To Choose</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="pref_max_guess">Highest Number</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="pref_max_guess_summary">Largest Number To Choose</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="pref_other_options">Other Options</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="pref_play_sounds">Play Sounds</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="pref_play_sounds_summary">Play Game Sounds</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="error_new_min_above_max">Lowest Value Must Be Less Than Max Value</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="min_value_change_success">New Lowest Value:</string>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="error_new_max_below_min">Largest Value Must Be Greater Than The Smallest</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="max_value_change_success">New Highest Value:</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/string1" name="action_about">About</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="about_button_done">Cool! Back To The Game</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="brought_by">Brought To You By</string>
    <color android:layout_width="wrap_content" android:id="@+id/color1" android:layout_height="wrap_content" name="text_color">#ffffff</color>
    <string android:layout_height="wrap_content" android:id="@+id/string1" android:layout_width="wrap_content" name="error_min_value_zero">Lowest Value Must Be Greater Than 0</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="error_invallid_input">Number must be an integer no greater than 2147483645</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="error_playing_sound">Error Playing Sound</string>

</resources>
