<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appsbylyon.guessinggame.GuessingGame$PlaceholderFragment" >

    <ImageView
        android:id="@+id/activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/activity_title" />

    <LinearLayout
        android:id="@+id/comp_prompt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_header"
        android:layout_marginTop="3sp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/comp_prompt_1"
            android:textColor="@color/text_color"
            android:textSize="@dimen/comp_prompt_text_size" />
        
        <TextView
            android:id="@+id/guessing_range_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/comp_prompt_2"
            android:textColor="@color/text_color"
            android:textSize="@dimen/comp_prompt_text_size" />

    	<TextView
    	    android:id="@+id/textView3"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/comp_prompt_3"
    	    android:textColor="@color/text_color"
    	    android:textSize="@dimen/comp_prompt_text_size" />
	
    	<Button
    	    android:id="@+id/guess_button"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/button_guess_text"
    	    android:textColor="@color/text_color" />
    	
    	<EditText
    	    android:id="@+id/user_guess"
    	    android:layout_width="90sp"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:ems="10"
    	    android:inputType="number"
    	    android:textColor="@color/text_color"
    	    android:textColorHint="@color/text_color" >

    	    <requestFocus />
    	</EditText>

    	<TextView
    	    android:id="@+id/guess_result_label"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/result_text_correct"
    	    android:textColor="@color/text_color"
    	    android:textSize="@dimen/comp_prompt_text_size" />
    	
    	<TextView
    	    android:id="@+id/answer_label"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/answer_label"
    	    android:textColor="@color/text_color"
    	    android:textSize="@dimen/comp_prompt_text_size" />

    	<CheckBox
    	    android:id="@+id/show_answer"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_gravity="center"
    	    android:text="@string/show_answer_prompt"
    	    android:textColor="@color/text_color"
    	    android:textSize="@dimen/comp_prompt_text_size" />

    </LinearLayout>

   

</RelativeLayout>